--- a/index.html
+++ b/index.html
@@ -1,28 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>LexaComputer Animation</title>
-    <style>
-      body {
-        background-color: black;
-      }
-      .animation {
-        font-family: monospace;
-        font-size: 50px;
-        color: white;
-        animation: write 5s steps(10) forwards;
-      }
-      @keyframes write {
-        from {
-          width: 0;
-        }
-        to {
-          width: 500px;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="animation">LexaComputer</div>
-  </body>
-</html>
+<link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
+
+.content
+  .visible
+    %p 
+      Hello
+    %ul
+      %li World !
+      %li Lexa !
+      %li Hackers !
