--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 
 .content
