--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<link rel="stylesheet" href="style.css">
-<link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
-
-.content
-  .visible
-    %p 
-      Hello
-    %ul
-      %li World !
-      %li Lexa !
-      %li Hackers !
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" type="text/css">
+</head>
+<body>
+  <div class="content">
+    <div class="visible">
+      <p>Hello</p>
+      <ul>
+        <li>World!</li>
+        <li>Lexa!</li>
+        <li>Hackers!</li>
+      </ul>
+    </div>
+  </div>
+</body>
+</html>
