--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <h1 class="logo">Negocios Inteligentes</h1>
                 <nav>
                     <ul>
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Sobre Nosotros</a></li>
-                        <li><a href="#">Contacto</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
@@ -111,6 +111,6 @@
             <p>&copy; 2024 Negocios Inteligentes.<br>Todos los derechos reservados.</p>
         </footer>
         <a href="#" class="ir-arriba">↑ Ir Arriba</a>
-        <script src="js/mainj.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
