--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
     <body id="body-contacto">
         <header>
             <div class="nav-contenedor">
-                <h1 class="logo">Negocios Inteligentes</h1>
+                <h1 class="logo"><a href="index.html">Negocios Inteligentes</a></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
@@ -43,5 +43,6 @@
         </footer id="footer">
         <script src="js/particles.js"></script>
         <script src="js/app.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
