--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div class="nav-contenedor">
-                <h1 class="logo">Negocios Inteligentes</h1>
+                <h1 class="logo"><a href="index.html">Negocios Inteligentes</a></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
