--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body id="body-sobre-nosotros">
         <header>
             <div class="nav-contenedor">
                 <h1 class="logo"><a href="index.html">Negocios Inteligentes</a></h1>
@@ -22,6 +22,7 @@
                 </nav>
             </div>
         </header>
+        <div id="particles-js"></div>
             <main>
                 <h2 class="participantes-h2">Participantes</h2>
                 <div class="participantes">
@@ -37,6 +38,8 @@
             <p>&copy; 2024 Negocios Inteligentes.<br>Todos los derechos reservados.</p>
         </footer id="footer">
         <a href="#" class="ir-arriba">↑ Ir Arriba</a>
+        <script src="js/particles.js"></script>
+        <script src="js/app.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
