--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -23,17 +23,12 @@
             </div>
         </header>
         <div id="particles-js"></div>
-            <main>
-                <h2 class="participantes-h2">Participantes</h2>
-                <div class="participantes">
-                    <ul>
-                        <li>Fernando Bethancourt</li>
-                        <li>David Martinez</li>
-                        <li>David Rodriguez</li>
-                        <li>David Carrion</li>
-                    </ul>
-                </div>
-            </main>
+        <main>
+            <h2 style="text-align: center;">Video Informativo</h2>
+            <div class="video-container">
+                <iframe class="vid_example" width="560" height="315" src="https://www.youtube.com/embed/Pmdps2kK_5M?si=2_8XTlyFh8edbmHK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </main>
         <footer>
             <p>&copy; 2024 Negocios Inteligentes.<br>Todos los derechos reservados.</p>
         </footer id="footer">
