--- a/contacto.html
+++ b/contacto.html
@@ -27,10 +27,10 @@
             <h1>Contacto</h1>
             <form action="#">
                 <label for="name">Nombre:</label>
-                <input type="text" id="name" name="name" required>
+                <input type="text" id="name" name="name"  placeholder="John Doe" required>
     
                 <label for="email">Correo Electrónico:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" placeholder="johndoe@example.com" required>
     
                 <label for="message">Mensaje:</label>
                 <textarea id="message" name="message" rows="4" required></textarea>
