--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body id="body-principal">
+        <div id="particles-js"></div>
+        <div id="overlay"></div>
         <header>
             <div class="nav-contenedor">
                 <h1 class="logo"><a href="index.html">Negocios Inteligentes</a></h1>
@@ -23,9 +25,6 @@
             </div>
         </header>
         <div class="contenedor">
-            <main>
-                <div class="contenedor"></div>
-            </main>
             <section id="hero">
                 <h1>Los negocios inteligentes<br></h1>
             </section>
@@ -81,21 +80,21 @@
                     <div class="columnas ventajas">
                         <h2>Ventajas</h2>
                         <ul>
-                            <li>✔️ Mejora de la Eficiencia Operativa</li>
-                            <li>✔️ Toma de Decisiones Informada</li>
-                            <li>✔️ Mayor Personalización</li>
-                            <li>✔️ Incremento en la Productividad</li>
-                            <li>✔️ Innovación Continua</li>
+                            <li>✔️ Mejora de la Eficiencia Operativa.</li>
+                            <li>✔️ Toma de Decisiones Informada.</li>
+                            <li>✔️ Mayor Personalización.</li>
+                            <li>✔️ Incremento en la Productividad.</li>
+                            <li>✔️ Innovación Continua.</li>
                         </ul>
                     </div>
                     <div class="columnas desventajas">
                         <h2>Desventajas</h2>
                         <ul>
-                            <li>❌ Costos Iniciales Elevados</li>
-                            <li>❌ Dependencia de la Tecnología</li>
-                            <li>❌ Desafíos de Integración</li>
-                            <li>❌ Desigualdad Digital</li>
-                            <li>❌ Riesgos de Privacidad</li>
+                            <li>❌ Costos Iniciales Elevados.</li>
+                            <li>❌ Dependencia de la Tecnología.</li>
+                            <li>❌ Desafíos de Integración.</li>
+                            <li>❌ Desigualdad Digital.</li>
+                            <li>❌ Riesgos de Privacidad.</li>
                         </ul>
                     </div>
                 </div>
@@ -112,5 +111,7 @@
         </footer>
         <a href="#" class="ir-arriba">↑ Ir Arriba</a>
         <script src="js/main.js"></script>
+        <script src="js/particles.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
